[project]
name = "market-data-service"
version = "0.1.0"
description = "Market Data Service - weather, prices, DUoS data management"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "flasgger>=0.9.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]